Fix contrast

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -746,7 +746,7 @@ a:hover { color: #6c2eb2; }
 }
 
 .color-2 {
-  background-color: #C783E9;
+  background-color: #aa43dd;
 }
 
 .grey {
